package game.mobs;

public class CombatManager {

    public CombatManager(){}

    public void dealDamage(){}
    
}
