package game.mobs;

public enum Element {
    
}
