package game.mobs;

public class Enemy extends Mob{
    private int speed;
    private int reward;
}
