package game.mobs;

public class EntityManager{


    public EntityManager(){}
}