package game.mobs;

public class Tower extends Mob{
    private int cost;
    private int range;
}