@startuml
!define DARKGREEN
!include themes/style.puml

package game <<frame>> {
    package mobs{
        enum Elements {
            + NONE = -1
            + WIND = 0
            + FIRE = 1
            + WATER = 2
            + AIR = 3
            + EARTH = 4
            + AIR = 5
        }
            note left of Elements::WIND #Chocolate
              -1 and 0 will be ignored
              in the vulnerability check
            end note


        Elements -- Mob
        Status -- Mob
        abstract class Mob {
            - String: name
            - int: maxHealth
            - int: currentHealth
            - int: attack
            - int: attackSpeed
            - Element: element
            + {abstract}int: attack()
            +
        }

        enum Status {
            WIP
        }

        together {
        skinparam groupInheritance 2
            class Enemy extends Mob{
                - int: speed
                - int: reward
            }
            class Tower extends Mob{
                - int: cost
                - int: range
            }
        }

        class Projectile {
            - Mob: sender
            - Mob: target
            -
        }
    }
    package interface {
        Shop::towers --left-- Tower
        class Shop {
            - Map<Tower>: towers
        }
        class PlayerInfo {
            - Player: player
            + void: displayHealth()
            + void: displayMoney()
        }
        class GameInfo {
            - Game: gameInstance
            + void: displayLevel()
            + void: displayWave()
        }

        class GameMap{
        }
    }
    Player -- PlayerInfo
    class Player {
        - int: health
        - int: money
    }

    Game -- GameInfo
    class Game <<(S,#FF7700)Singleton>> {
        - int: currentLevel
        - int: maxLevel
        - int: currentWave
        - int: maxWave
        - int: tick
        - Game()
        + Game: getInstance()
        + void: gameUpdate()
    }

    class GameMap {
    }

    CombatManager - Mob

    class CombatManager {
        - Map<Mob>: mobs
        + heal(Mob: receiver, int: value)
        + dealDamage(Mob: sender, Mob: receiver, int: damage, Status: status)
        + int: checkVulnerability()
    }

    class EntityManager {
        -
    }


}


@enduml